@@ -4,13 +4,15 @@ import com.cisco.pxgrid.GridConnection;
 import com.cisco.pxgrid.ReconnectionManager;
 import com.cisco.pxgrid.TLSConfiguration;
 import org.apache.commons.lang.StringUtils;
-import org.apache.hadoop.hbase.util.Base64;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.Assert;
-import sun.misc.BASE64Decoder;
+import java.util.Base64;
 
-import java.io.*;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.KeyStore;
@@ -233,8 +235,8 @@ public class PxGridHandler {
 	private String saveKey(String base64Key, String fileName) throws IOException {
 		byte[] keyBytes;
 
-		BASE64Decoder decoder = new BASE64Decoder();
-		keyBytes = decoder.decodeBuffer(base64Key);
+		Base64.Decoder decoder = Base64.getDecoder();
+		keyBytes = decoder.decode(base64Key);
 		try (OutputStream stream = new FileOutputStream(fileName)) {
 			stream.write(keyBytes);
 		}
